Chnages in header

--- a/devopsIQ/index.html
+++ b/devopsIQ/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>Anand Website</title>
+<title>Cloudtrain Website</title>
 <body background="images/1.jpg">
 <p align="center">
 <img src="images/cloudtrain.jpg" style="width:450px;height:80px;align:center" >
